# resultados_electorales_espanya

./: README.md  map_data_exploration.ipynb  polars_exploration.ipynb  pyproject.toml  requirements.txt
src/: area_processor.py  area_type_processor.py  dashboard.py  data_selector.py  election_data_filter.py  electoral_system_processor.py  main.py  protocols.py  results_calculator.py  spain_map.py
src/notebooks/: exploration.ipynb  exploration_2.ipynb  polars_exploration.ipynb
src/utils/: csv_cleaner.py
tests/: test_area_processor.py  test_compute_largest_remainder.py  test_data_selector.py
