[tool.poetry]
name = "Resultados Electorales en España"
version = "0.1.0"
description = ""
authors = ["César C. <cesar.castares@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
pandas = "^1.4.3"
polars = "^0.18.8"
streamlit = "^1.24.1"
geopandas = "^0.14.3"
altair = "^5.0.1"
plotly = "^5.18.0"

[tool.poetry.dev-dependencies]
pandas-stubs = "^1.4.3"
pytest = "^7.1.2"
black = "^22.8.0"
mypy = "^0.971"
flake8 = "^5.0.4"
ipykernel = "^6.24.0"
nbformat = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
